--- a/paper/sample.bib
+++ b/paper/sample.bib
@@ -55,3 +55,11 @@
   title     = {Apache SystemML Github Repository},
   url       = {https://github.com/apache/systemml}
 }
+@online{apache_data_structures,
+  title     = {Apache Spark data structures [Beyond the lines blog]},
+  url       = {http://www.beyondthelines.net/computing/apache-spark-data-structures/}
+}
+@online{optimized_dag_to_physical,
+  title     = {Databricks: Spark SQL ddata analysis of Liancheng},
+  url       = {http://prog3.com/article/2015-06-18/2824958}
+}
